Revision 2: Add RTT (Round Trip Time) information to debugger mode documentation

--- a/apps/opik-documentation/documentation/fern/docs/faq.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/faq.mdx
@@ -255,16 +255,17 @@ Press `Command + Shift + .` on macOS or `Ctrl + Shift + .` on Windows/Linux
 
 **What it displays:**
 
-- **Network Status**: Real-time connectivity indicator showing your connection to the Opik backend
+- **Network Status**: Real-time connectivity indicator with RTT (Round Trip Time) showing latency to the Opik backend server in seconds
 - **Opik Version**: The current version of Opik you're running (click to copy to clipboard)
 
 This information is helpful when:
 
-- Reporting issues to the Opik team (include the version number)
+- Reporting issues to the Opik team (include the version number and RTT)
 - Verifying your Opik version matches expected deployment
-- Diagnosing connectivity problems between UI and backend
+- Diagnosing connectivity problems between UI and backend (check RTT for latency issues)
 - Troubleshooting UI-related issues or unexpected behavior
 - Confirming successful updates or deployments
+- Monitoring network performance and latency to the backend server
 
 **How it works:**
 
