Revision 3: Add screenshot example and consolidate documentation to FAQ only

--- a/apps/opik-documentation/documentation/fern/docs/faq.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/faq.mdx
@@ -253,6 +253,10 @@ investigating connectivity problems, reporting bugs, or verifying your deploymen
 
 Press `Command + Shift + .` on macOS or `Ctrl + Shift + .` on Windows/Linux
 
+<Frame>
+  <img src="/img/faq/comet_debugger_mode.png" alt="Comet Debugger Mode showing RTT and version" />
+</Frame>
+
 **What it displays:**
 
 - **Network Status**: Real-time connectivity indicator with RTT (Round Trip Time) showing latency to the Opik backend server in seconds
