Revision 4: Clarify that Comet Debugger Mode is a browser/UI feature in the web application

--- a/apps/opik-documentation/documentation/fern/docs/faq.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/faq.mdx
@@ -243,11 +243,9 @@ into potential issues.
 Reviewing these sections can help pinpoint the source of the problem and suggest possible
 resolutions.
 
-### ⌨️ Using Comet Debugger Mode
+### ⌨️ Using Comet Debugger Mode (UI/Browser)
 
-**Comet Debugger Mode** is a hidden diagnostic feature in the Opik UI that displays real-time
-technical information to help you troubleshoot issues. This mode is particularly useful when
-investigating connectivity problems, reporting bugs, or verifying your deployment version.
+**Comet Debugger Mode** is a hidden diagnostic feature in the **Opik web application** that displays real-time technical information to help you troubleshoot issues. This mode is particularly useful when investigating connectivity problems, reporting bugs, or verifying your deployment version.
 
 **To toggle Comet Debugger Mode:**
 
